--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Claudia - Your AI Terminal Companion with Avatar Support" />
+    <meta name="keywords" content="AI, terminal, assistant, avatar, chat, companion" />
+    <meta name="author" content="Claudia AI" />
+    <title>Claudia - AI Terminal Companion</title>
   </head>
   <body>
     <div id="root"></div>
