feat(boot): AI-centric boot sequence with parallel tasks & touch interrupt
- Replace BootSequence with new BootAnimation component
- Implement parallel task execution (persona loading, provider init, history hydration)
- Add useBootInterrupt hook with Esc/Enter/Space/touch skip functionality
- Auto-skip for users with prefers-reduced-motion preference
- localStorage skipBoot flag with Shift+refresh override
- Boot chime audio and neutral avatar fade-in during empathy stage
- Comprehensive test coverage with mocked async tasks
- Preload assets (neutral.png, boot_chime.ogg) for smooth UX

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="AI, terminal, assistant, avatar, chat, companion" />
     <meta name="author" content="Claudia AI" />
     <title>Claudia - AI Terminal Companion</title>
+    <link rel="preload" as="image" href="/src/assets/neutral.png" />
+    <link rel="preload" as="audio" href="/audio/boot_chime.ogg" />
   </head>
   <body>
     <div id="root"></div>
